...
      if (node is CollectionNode || node is FolderNode)
        CustomPopupMenuItem(
          height: 30,
          shouldPop: true,
          child: Row(
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            children: [Text('New Request', style: contextMenuTextStyle), Text('Ctrl+N', style: contextMenuTextStyle)],
          ),
          onTap: () => onNewRequestInFolder(node),
        ),
      if (node is CollectionNode || node is FolderNode)
        CustomPopupMenuItem(
          height: 30,
...
      if (node is CollectionNode || node is FolderNode)
        CustomPopupMenuItem(
          height: 30,
          shouldPop: true,
          child: Row(
            mainAxisAlignment: MainAxisAlignment.spaceBetween,
            children: [Text('Settings', style: contextMenuTextStyle)],
          ),
          onTap: () => onOpenNodeSettings(node),
        ),
      if (node is RequestNode)
        CustomPopupMenuItem(
          height: 30,
          shouldPop: true,
          child: Text('Open', style: contextMenuTextStyle),
          onTap: () => context.read<ExplorerService>().openNode(node),
        ),
      if (node is RequestNode)
        CustomPopupMenuItem(
          height: 30,
          shouldPop: true,
...
