...
  Widget build(BuildContext context) {
    // Environments for dropdown
    final environments = ['No Environment'];
    if (_currentCollection != null) {
      environments.addAll(_currentCollection!.environments.map((e) => e.fileName()));
    }
    environments.add('Configure');

    final selectedEnvBorderColor =
        getSelectedEnvironment() == 'No Environment' ? Color(0xFF474747) : fadedHighlightBorderColor;
    // Global environments for dropdown
    final globalEnvironments = ['No Environment'];
    globalEnvironments.addAll(context.read<GlobalEnvironmentRepo>().getAll().map((e) => e.name));
...
                        margin: const EdgeInsets.only(left: 2, right: 8),
                        decoration: BoxDecoration(
                          border: Border.all(color: selectedEnvBorderColor, width: 1),
                          borderRadius: BorderRadius.circular(4),
                        ),
                        child: DropdownButton2<String>(
                          key: const Key('editor_tabs_env_dropdown'),
                          value: getSelectedEnvironment(),
                          underline: Container(),
                          dropdownStyleData: DropdownStyleData(
                            decoration: dropdownDecoration,
                            width: 150,
                            openInterval: Interval(0.0, 0.0),
...
