...
    ),
    color: contextMenuColor,
    shape: contextMenuShape,
    items: [
      PopupMenuItem(
        height: 30,
        child: Text('Open Collection', style: contextMenuTextStyle),
        onTap: () => onOpenCollection(),
      ),
      PopupMenuItem(
        height: 30,
        child: Text('New Collection', style: contextMenuTextStyle),
        onTap: () {
          print('TODO: Implement New Collection');
        },
      ),
      PopupMenuItem(height: 30, onTap: () => onRefresh(), child: Text('Refresh', style: contextMenuTextStyle)),
      PopupMenuItem(height: 30, onTap: onNewRequest, child: Text('New Request', style: contextMenuTextStyle)),
    ],
  );
}

